fix error on mobile

--- a/client/src/css/PlayerPage.css
+++ b/client/src/css/PlayerPage.css
@@ -71,8 +71,12 @@
   width: fit-content;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .music-controller-container {
     max-width: 100%;
+  }
+  .error-container {
+    font-size: 25px;
+    width: 300px;
   }
 }
